# substrate

./: '  .gitignore  COPYRIGHT  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml
codegen/: Cargo.toml
codegen/src/: derive_interface.rs  hard_macro.rs  lib.rs
examples/tut01_getting_started/: Cargo.toml  README.md
examples/tut01_getting_started/src/: main.rs
libs/gds21/: Cargo.toml
libs/gds21/src/: lib.rs  read.rs  ser.rs  tests.rs  write.rs
libs/subgates/: Cargo.toml
libs/subgates/src/: lib.rs
libs/subgeom/: Cargo.toml
libs/subgeom/src/: bbox.rs  lib.rs  orientation.rs  ring.rs  transform.rs  trim.rs
libs/sublut/: Cargo.toml
libs/sublut/src/: lib.rs
pdks/empty_pdk/: Cargo.toml
pdks/empty_pdk/src/: lib.rs
pdks/sky130_commercial_pdk/: Cargo.toml
pdks/sky130_commercial_pdk/src/: lib.rs  mos.rs
pdks/sky130_common_pdk/: Cargo.toml
pdks/sky130_common_pdk/data/: layers.csv
pdks/sky130_common_pdk/src/: constants.rs  layers.rs  lib.rs  mos.rs  stdcells.rs  via.rs
pdks/sky130_open_pdk/: Cargo.toml
pdks/sky130_open_pdk/src/: lib.rs  mos.rs
plugins/ngspice/: Cargo.toml
plugins/ngspice/src/: lib.rs  templates.rs  tests.rs
plugins/ngspice/templates/: netlist.spice
plugins/spectre/: Cargo.toml
plugins/spectre/examples/: vdivider_tb.scs  vdivider_tb.spice
plugins/spectre/src/: lib.rs  templates.rs  tests.rs
plugins/spectre/templates/: run_sim.sh  sim.top.spice
plugins/spice_rawfile/: Cargo.toml
plugins/sub_calibre/: Cargo.toml
plugins/sub_calibre/src/: lib.rs
plugins/subspice/: Cargo.toml
plugins/subspice/examples/: sram.spice  tmc.spice
plugins/subspice/src/: lib.rs
plugins/subspice/src/parser/: mod.rs  tests.rs
scripts/mergegds/: Cargo.toml  README.md
scripts/mergegds/src/: lib.rs  main.rs
substrate/: Cargo.toml
substrate/data/tests/hammer/: power_straps.json  power_straps_sky130.json
substrate/data/tests/hard_macros/: example_01.toml
substrate/data/tests/schematics/: example_01.spice  my_transistor.spice
substrate/src/: borrow.rs  data.rs  deps.rs  error.rs  index.rs  io.rs  lib.rs  log.rs  macros.rs  search.rs  tests.rs  units.rs  validation.rs
substrate/src/component/: error.rs  mod.rs
substrate/src/digital/: concat.rs  context.rs  mod.rs  module.rs  types.rs  wire.rs
substrate/src/digital/modules/: reg.rs
substrate/src/digital/rtlgen/: mod.rs
substrate/src/digital/validation/: mod.rs  wire.rs
substrate/src/fmt/: signal.rs
substrate/src/generation/: mod.rs
substrate/src/hard_macro/: mod.rs
substrate/src/layout/: cell.rs  context.rs  error.rs  mod.rs
substrate/src/layout/convert/: error.rs  gds.rs  lef.rs  mod.rs
substrate/src/layout/elements/: mod.rs  mos.rs
substrate/src/layout/elements/via/: generators.rs  mod.rs
substrate/src/layout/group/: elements.rs  mod.rs
substrate/src/layout/layers/: mod.rs  selector.rs
substrate/src/layout/placement/: align.rs  array.rs  grid.rs  mod.rs  nine_patch.rs  place_bbox.rs  tile.rs
substrate/src/layout/routing/: mod.rs  tracks.rs
substrate/src/layout/routing/auto/: abs.rs  error.rs  grid.rs  mod.rs  straps.rs
substrate/src/layout/routing/manual/: jog.rs  mod.rs
substrate/src/layout/straps/: hammer.rs  mod.rs
substrate/src/layout/validation/: mod.rs
substrate/src/logic/: delay.rs  mod.rs  tests.rs
substrate/src/pdk/: mod.rs
substrate/src/pdk/corner/: error.rs  mod.rs
substrate/src/pdk/mos/: db.rs  error.rs  mod.rs  query.rs  spec.rs
substrate/src/pdk/stdcell/: error.rs  mod.rs
substrate/src/schematic/: circuit.rs  context.rs  mod.rs  module.rs  signal.rs
substrate/src/schematic/elements/: capacitor.rs  iac.rs  idc.rs  mod.rs  mos.rs  resistor.rs  vac.rs  vdc.rs  vpulse.rs  vpwl.rs
substrate/src/schematic/netlist/: interface.rs  mod.rs  preprocess.rs
substrate/src/schematic/netlist/impls/: mod.rs  spice.rs
substrate/src/schematic/validation/: connectivity.rs  drivers.rs  mod.rs  naming.rs
substrate/src/script/: map.rs  mod.rs
substrate/src/verification/: mod.rs
substrate/src/verification/drc/: mod.rs
substrate/src/verification/lvs/: mod.rs
substrate/src/verification/pex/: mod.rs
substrate/src/verification/simulation/: bits.rs  context.rs  mod.rs  testbench.rs  waveform.rs
substrate/src/verification/timing/: context.rs  lut.rs  mod.rs
substrate/tests/: bubble_ports.rs  component.rs  digital.rs  digital_builtins.rs  external_module.rs  gates.rs  gds.rs  gds_cell_renaming.rs  hammer_straps.rs  hard_macro.rs  layout_ports.rs  mos.rs  routing.rs  schematic_validation.rs  script.rs  set_origin.rs  stdcell.rs  tiling.rs  timing.rs  transform.rs  trim.rs  via_basic.rs
substrate/tests/common/: common_source.rs  mod.rs  sp_cell.rs
substrate/tests/common/vdivider/: array.rs  mod.rs  tb.rs
