[package]
name = "substrate"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>", "Rohan Kumar <rohankumar@berkeley.edu>"]

[dependencies]
derive_builder = { version = "0.12.0", features = ["clippy"] }
serde = { version = "1", features = ["derive", "rc"] }
slotmap = { version = "1.0.6", features = ["serde"] }
tempdir = "0.3.7"
thiserror = "1.0.40"
enum_dispatch = "0.3.11"
arcstr = { version = "1.1.5", features = ["serde"] }
derivative = "2.2.0"
flexbuffers = "2"
gds21 = { path = "../libs/gds21" }
subspice = { path = "../plugins/subspice" }
subgeom = { path = "../libs/subgeom" }
sublut = { path = "../libs/sublut" }
codegen = { path = "../codegen" }
log = "0.4"
array_map = { version = "0.4", features = ["derive", "serde", "std"] }
toml = "0.7"
lazy_static = "1.4"
regex = "1.7"
grid = "0.9.0"
state = "0.5.3"
pathfinding = "4.2.1"
itertools = "0.10.5"
serde_json = "1.0.95"
anyhow = "1.0.70"
bitvec = { version = "1", features = ["serde"] }
csv = "1.2.1"

[dev-dependencies]
sky130_open_pdk = { path = "../pdks/sky130_open_pdk" }
ngspice = { path = "../plugins/ngspice" }
subgates = { path = "../libs/subgates" }
lazy_static = "1.4.0"
float_eq = "1"
