[package]
name = "sublut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { version = "0.12.0", features = ["clippy"] }
serde = { version = "1", features = ["derive", "rc"] }
splines = "4.2.0"

[dev-dependencies]
float_eq = "1"
serde = { version = "1", features = ["derive", "rc"] }
