[package]
name = "sub_calibre"
version = "0.0.1"
edition = "2021"

[dependencies]
calibre = { git = "ssh://git@bwrcrepo.eecs.berkeley.edu/rahulkumar/calibre.git", branch = "master" }
substrate = { path = "../../substrate" }
arcstr = { version = "1.1.5", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
